# search-space

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  _factory_sampler.example.ipynb  _numeral_spaces.example.ipynb  _object_sampler.example.ipynb  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run_exp.sh  twitter.md
.github/workflows/: test.yml
doc/: 0_intro.md  1_state_of_the_arte.md  table.md  version_doc.md
doc/states_resume/: dsl_classification.md  dsl_logic_bussines.md  hyperopt.md
examples/: genetic-search.py  numbers.ipynb
experimentation/: __main__.py  data_analyze.ipynb  simple_experimentation.py  tools.py  unique_experimentation.py
search_space/: __init__.py  dsl.py
search_space/context_manager/: __init__.py  runtime_manager.py  sampler_context.py
search_space/dsl/: __init__.py  dsl_interface.py
search_space/errors/: __init__.py
search_space/functions/: list.py  math.py
search_space/sampler/: __init__.py  distribution_names.py  distributions.py  factory.py  model_sampler.py
search_space/spaces/: __init__.py  ast.py  ast_constraint.py  ast_index.py  functions_and_predicates.py  search_space.py  search_space_protocol.py  ss_constraint.py  universal_variable.py
search_space/utils/: __init__.py  ast_tools.py  infinity.py  itertools.py  namespace_injection.py  (+3 more)
src/: __init__.py
test_times/: __main__.py  list_samplers.py  print_lines.py  simple_samplers.py
tests/: config.py  context_sensitive.ipynb  generate_numeral_value.ipynb  search_space_describe.ipynb  search_space_even_exampla.ipynb  search_space_list_exampla.ipynb
(+150 files in other folders)
